# dosbox-staging

./: .gitignore  INSTALL  README.md  README.meson.txt  configure.ac  meson.build  meson_options.txt
.github/meson/: native-mingw-w64-gcc.ini
.github/workflows/: analysis.yml  config.yml  macos.yml  windows.yml
include/: Makefile.am  cross.h  ethernet.h  hardware.h  ne2000.h  support.h
src/: config.h.in  dosbox.cpp  main.cpp
src/cpu/: cpu.cpp  meson.build
src/dos/: drive_local.cpp  meson.build
src/gui/: meson.build  sdlmain.cpp
src/hardware/: Makefile.am  meson.build  mpu401.cpp  ne2000.cpp  opl.h
src/hardware/serialport/: Makefile.am
src/ints/: meson.build
src/libs/decoders/: meson.build
src/midi/: meson.build  midi_mt32.cpp  midi_mt32.h
src/misc/: Makefile.am  ethernet.cpp  ethernet_slirp.cpp  ethernet_slirp.h  meson.build  support.cpp
src/platform/visualc/: config.h
src/shell/: meson.build
subprojects/: fluidsynth.wrap  glib.wrap
tests/: Makefile.am  cfifo.cpp  readerwritercircularbuffer.cpp
vs/: dosbox.vcxproj  dosbox.vcxproj.filters
