libmisc_sources = [
  'cross.cpp',
  'fs_utils_posix.cpp',
  'fs_utils_win32.cpp',
  'messages.cpp',
  'programs.cpp',
  'setup.cpp',
  'support.cpp',
]

libmisc = static_library('misc', libmisc_sources,
                         include_directories : incdir,
                         dependencies : sdl2_dep)
